; ModuleID = '/home/carl/AnghaBench/libevent/extr_epoll_sub.c_epoll_wait.c'
source_filename = "/home/carl/AnghaBench/libevent/extr_epoll_sub.c_epoll_wait.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.epoll_event = type { i32 }

@__NR_epoll_wait = common dso_local global i32 0, align 4
@__NR_epoll_pwait = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @epoll_wait(i32 %0, %struct.epoll_event* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.epoll_event*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store %struct.epoll_event* %1, %struct.epoll_event** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load i32, i32* @__NR_epoll_wait, align 4
  %10 = load i32, i32* %5, align 4
  %11 = load %struct.epoll_event*, %struct.epoll_event** %6, align 8
  %12 = load i32, i32* %7, align 4
  %13 = load i32, i32* %8, align 4
  %14 = call i32 (i32, i32, %struct.epoll_event*, i32, i32, ...) @syscall(i32 %9, i32 %10, %struct.epoll_event* %11, i32 %12, i32 %13)
  ret i32 %14
}

declare dso_local i32 @syscall(i32, i32, %struct.epoll_event*, i32, i32, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
